--- a/config/twitter.yml.example.yaml
+++ b/config/twitter.yml.example.yaml
@@ -3,3 +3,8 @@ development:
   consumer_secret: lorem
   access_token: lorem
   access_token_secret: lorem
+production:
+  consumer_key: ENV['CONSUMER_KEY']       
+  consumer_secret: ENV['CONSUMER_SECRET']    
+  access_token: ENV['ACCESS_TOKEN']       
+  access_token_secret: ENV['ACCESS_TOKEN_SECRET']
